Ajustes e melhorias - DTOs to Record