@@ -3,14 +3,13 @@ package br.com.erp.ms_empresa.service.impl;
 import br.com.erp.ms_empresa.dto.EnderecoEmpresaListDTO;
 import br.com.erp.ms_empresa.dto.EnderecoEmpresaRequest;
 import br.com.erp.ms_empresa.dto.EnderecoEmpresaResponse;
+import br.com.erp.ms_empresa.enums.TipoEnderecoEmpresa;
 import br.com.erp.ms_empresa.model.Empresa;
 import br.com.erp.ms_empresa.model.EnderecoEmpresa;
-import br.com.erp.ms_empresa.enums.TipoEnderecoEmpresa;
 import br.com.erp.ms_empresa.repository.EmpresaRepository;
 import br.com.erp.ms_empresa.repository.EnderecoEmpresaRepository;
 import br.com.erp.ms_empresa.service.EnderecoEmpresaService;
 import jakarta.persistence.EntityNotFoundException;
-import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
@@ -18,65 +17,69 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Implementação da interface EnderecoEmpresaService.
+ * Adaptada para uso com records no pacote de DTOs.
  */
 @Service
-@RequiredArgsConstructor
+@Transactional
 public class EnderecoEmpresaServiceImpl implements EnderecoEmpresaService {
 
     private final EnderecoEmpresaRepository enderecoEmpresaRepository;
     private final EmpresaRepository empresaRepository;
     private final ModelMapper modelMapper;
 
-    @Override
-    @Transactional
-    public EnderecoEmpresaResponse create(EnderecoEmpresaRequest request) {
-        Empresa empresa = empresaRepository.findById(request.getEmpresaId())
-                .orElseThrow(() -> new EntityNotFoundException("Empresa não encontrada com ID: " + request.getEmpresaId()));
+    public EnderecoEmpresaServiceImpl(EnderecoEmpresaRepository enderecoEmpresaRepository,
+                                      EmpresaRepository empresaRepository,
+                                      ModelMapper modelMapper) {
+        this.enderecoEmpresaRepository = enderecoEmpresaRepository;
+        this.empresaRepository = empresaRepository;
+        this.modelMapper = modelMapper;
+    }
 
-        // Validação: não permitir duplicidade de tipo para mesma empresa
-        if (enderecoEmpresaRepository.existsByEmpresaIdAndTipo(request.getEmpresaId(), request.getTipo())) {
+    // ==================================
+    // 🔹 CRUD
+    // ==================================
+
+    @Override
+    public EnderecoEmpresaResponse create(EnderecoEmpresaRequest request) {
+        Empresa empresa = empresaRepository.findById(request.empresaId())
+                .orElseThrow(() -> new EntityNotFoundException("Empresa não encontrada com ID: " + request.empresaId()));
+
+        // Evita duplicidade de tipo de endereço para a mesma empresa
+        if (enderecoEmpresaRepository.existsByEmpresaIdAndTipo(request.empresaId(), request.tipo())) {
             throw new DataIntegrityViolationException(
-                    "A empresa já possui um endereço cadastrado do tipo: " + request.getTipo());
+                    "A empresa já possui um endereço cadastrado do tipo: " + request.tipo());
         }
 
         EnderecoEmpresa endereco = modelMapper.map(request, EnderecoEmpresa.class);
         endereco.setEmpresa(empresa);
 
         EnderecoEmpresa saved = enderecoEmpresaRepository.save(endereco);
-        EnderecoEmpresaResponse response = modelMapper.map(saved, EnderecoEmpresaResponse.class);
-        response.setEmpresaId(empresa.getId());
-        response.setEmpresaRazaoSocial(empresa.getRazaoSocial());
-        return response;
+        return toResponse(saved);
     }
 
     @Override
-    @Transactional
     public EnderecoEmpresaResponse update(Long id, EnderecoEmpresaRequest request) {
         EnderecoEmpresa endereco = enderecoEmpresaRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Endereço não encontrado com ID: " + id));
 
-        Empresa empresa = empresaRepository.findById(request.getEmpresaId())
-                .orElseThrow(() -> new EntityNotFoundException("Empresa não encontrada com ID: " + request.getEmpresaId()));
+        Empresa empresa = empresaRepository.findById(request.empresaId())
+                .orElseThrow(() -> new EntityNotFoundException("Empresa não encontrada com ID: " + request.empresaId()));
 
         // Verifica duplicidade de tipo (exceto se for o mesmo registro)
-        if (enderecoEmpresaRepository.existsByEmpresaIdAndTipo(request.getEmpresaId(), request.getTipo())
-                && !endereco.getTipo().equals(request.getTipo())) {
+        if (enderecoEmpresaRepository.existsByEmpresaIdAndTipo(request.empresaId(), request.tipo())
+                && !endereco.getTipo().equals(request.tipo())) {
             throw new DataIntegrityViolationException(
-                    "A empresa já possui outro endereço cadastrado do tipo: " + request.getTipo());
+                    "A empresa já possui outro endereço cadastrado do tipo: " + request.tipo());
         }
 
         modelMapper.map(request, endereco);
         endereco.setEmpresa(empresa);
 
         EnderecoEmpresa updated = enderecoEmpresaRepository.save(endereco);
-        EnderecoEmpresaResponse response = modelMapper.map(updated, EnderecoEmpresaResponse.class);
-        response.setEmpresaId(empresa.getId());
-        response.setEmpresaRazaoSocial(empresa.getRazaoSocial());
-        return response;
+        return toResponse(updated);
     }
 
     @Override
@@ -84,10 +87,7 @@ public class EnderecoEmpresaServiceImpl implements EnderecoEmpresaService {
     public EnderecoEmpresaResponse findById(Long id) {
         EnderecoEmpresa endereco = enderecoEmpresaRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Endereço não encontrado com ID: " + id));
-        EnderecoEmpresaResponse response = modelMapper.map(endereco, EnderecoEmpresaResponse.class);
-        response.setEmpresaId(endereco.getEmpresa().getId());
-        response.setEmpresaRazaoSocial(endereco.getEmpresa().getRazaoSocial());
-        return response;
+        return toResponse(endereco);
     }
 
     @Override
@@ -95,20 +95,15 @@ public class EnderecoEmpresaServiceImpl implements EnderecoEmpresaService {
     public List<EnderecoEmpresaListDTO> findByEmpresa(Long empresaId) {
         return enderecoEmpresaRepository.findByEmpresaId(empresaId)
                 .stream()
-                .map(e -> modelMapper.map(e, EnderecoEmpresaListDTO.class))
-                .collect(Collectors.toList());
+                .map(this::toListDTO)
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public Optional<EnderecoEmpresaResponse> findByCep(String cep) {
         return enderecoEmpresaRepository.findByCep(cep)
-                .map(e -> {
-                    EnderecoEmpresaResponse resp = modelMapper.map(e, EnderecoEmpresaResponse.class);
-                    resp.setEmpresaId(e.getEmpresa().getId());
-                    resp.setEmpresaRazaoSocial(e.getEmpresa().getRazaoSocial());
-                    return resp;
-                });
+                .map(this::toResponse);
     }
 
     @Override
@@ -116,8 +111,8 @@ public class EnderecoEmpresaServiceImpl implements EnderecoEmpresaService {
     public List<EnderecoEmpresaListDTO> findByCidade(String cidade) {
         return enderecoEmpresaRepository.findByCidadeIgnoreCase(cidade)
                 .stream()
-                .map(e -> modelMapper.map(e, EnderecoEmpresaListDTO.class))
-                .collect(Collectors.toList());
+                .map(this::toListDTO)
+                .toList();
     }
 
     @Override
@@ -125,8 +120,8 @@ public class EnderecoEmpresaServiceImpl implements EnderecoEmpresaService {
     public List<EnderecoEmpresaListDTO> findByUf(String uf) {
         return enderecoEmpresaRepository.findByUfIgnoreCase(uf)
                 .stream()
-                .map(e -> modelMapper.map(e, EnderecoEmpresaListDTO.class))
-                .collect(Collectors.toList());
+                .map(this::toListDTO)
+                .toList();
     }
 
     @Override
@@ -134,16 +129,47 @@ public class EnderecoEmpresaServiceImpl implements EnderecoEmpresaService {
     public List<EnderecoEmpresaListDTO> findByTipo(TipoEnderecoEmpresa tipo) {
         return enderecoEmpresaRepository.findByTipo(tipo)
                 .stream()
-                .map(e -> modelMapper.map(e, EnderecoEmpresaListDTO.class))
-                .collect(Collectors.toList());
+                .map(this::toListDTO)
+                .toList();
     }
 
     @Override
-    @Transactional
     public void delete(Long id) {
         if (!enderecoEmpresaRepository.existsById(id)) {
             throw new EntityNotFoundException("Endereço não encontrado com ID: " + id);
         }
         enderecoEmpresaRepository.deleteById(id);
+    }
+
+    // ==================================
+    // 🧭 MÉTODOS AUXILIARES
+    // ==================================
+
+    private EnderecoEmpresaResponse toResponse(EnderecoEmpresa entity) {
+        Empresa empresa = entity.getEmpresa();
+        return new EnderecoEmpresaResponse(
+                entity.getId(),
+                empresa != null ? empresa.getId() : null,
+                empresa != null ? empresa.getRazaoSocial() : null,
+                entity.getLogradouro(),
+                entity.getNumero(),
+                entity.getComplemento(),
+                entity.getBairro(),
+                entity.getCidade(),
+                entity.getUf(),
+                entity.getCep(),
+                entity.getTipo()
+        );
+    }
+
+    private EnderecoEmpresaListDTO toListDTO(EnderecoEmpresa entity) {
+        return new EnderecoEmpresaListDTO(
+                entity.getId(),
+                entity.getLogradouro(),
+                entity.getNumero(),
+                entity.getCidade(),
+                entity.getUf(),
+                entity.getTipo()
+        );
     }
 }
